# Rgz

./: .gitignore  CMakeLists.txt  Makefile  README.md  icipher.h  lib_loader.h  main.cpp  test.txt  test.txt.enc
Biryukov/atbash/: CMakeLists.txt  atbash.cpp  atbash.h
Biryukov/rc4/: CMakeLists.txt  rc4.cpp  rc4.h
Dobrinov/: icipher.h
Dobrinov/playfair/: CMakeLists.txt  library.cpp  library.h
Dobrinov/vernam/: CMakeLists.txt  library.cpp  library.h
Komarov/AffineCipher/: AffineCipher.cpp  AffineCipher.h  CMakeLists.txt
Komarov/TEA/: CMakeLists.txt  TEA.cpp  TEA.h
Safonov/chacha20/: CMakeLists.txt  chacha20.cpp  chacha20.h
Safonov/xtea/: CMakeLists.txt  xtea.cpp  xtea.h
include/: cipher_interface.h  cipherinterface.h
libs/AffineCipher/: AffineCipher.cpp
libs/TEA/: TEA.cpp
libs/atbash/: atbash.cpp
libs/chacha20/: chacha20.cpp
libs/rc4/: rc4.cpp
libs/xtea/: xtea.cpp
scripts/: install.sh  uninstall.sh
src/: cipher_api.h  main.cpp
tests/: test_ciphers.cpp
